--- a/integratedApps.html
+++ b/integratedApps.html
@@ -165,7 +165,9 @@ With the app deployed and installed by users, we can now focus on setting up wha
           <br>
           
 	<br>
-	
+<b>Block Users from Installing Third Party Apps</b><br>
+When any app is deployed by an admin, it appears to overwrite any settings in Outlook that blocks the store. This seems to be new functionality from Microsoft in 2024. To stop users from installing third party apps you should get your Global Admin to block this setting under M365 Admin - Integrated Apps - Deployed Apps (setting cog).<br>
+		
           </div>
           
           </td>
