--- a/installExchange2019.html
+++ b/installExchange2019.html
@@ -187,7 +187,7 @@ Originally I was going to install Exchange 2019, but there were a few reasons no
 		Port 80 - PowerShell<br>
 		Port 445 - SMB so I can check on the server health<br>
 		<br>
-		Management Server to Domain Controller<br>
+		Management Server to Domain Controller:<br>
 		Domain Controller Port 9389 - you will want to make Exchange changes to the local DC<br>
 
 		<br>
