--- a/automateUserCreation.html
+++ b/automateUserCreation.html
@@ -166,7 +166,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           </div>
 	<br>
 		<img src=automateUserCreation01.png class=ImageMain>
-          <div class=ImageCaption>Your new Azure App permission will need to be approved by a Global Admin.</div>
+          <div class=ImageCaption>↑ Your new Azure App permission will need to be approved by a Global Admin.</div>
 		<br>
           <b>2. Find the Site and Files we want to Access</b><br>
           Now that we have the permission to view our Excel file we need to go and actually find it. Due to a bug you will need the SiteID of the SharePoint Site, the name alone will not work in the Invoke-MgGraph command. After this, we need the DriveID and finally we list all children to get the FileID.<br>
@@ -178,7 +178,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           </div>
 	<br>
 		<img src=automateUserCreation02.png class=ImageMain>
-          <div class=ImageCaption>Open the SharePoint Site from the Teams channel.</div>
+          <div class=ImageCaption>↑ Open the SharePoint Site from the Teams channel.</div>
 		<br>
           <b>3. Access and Parse the Excel file</b><br>
           TBC<br>
