--- a/powershellCore.html
+++ b/powershellCore.html
@@ -213,7 +213,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 	<b>Other General Tips</b><br>
 		<li>If using the module Microsoft.Graph in scripts, then don't import the module. The Connect-MGGraph command will already know what features the Azure app can access. If you do import the module, then it can take up to 15 minutes to load all the different parts.</li>
-          
+          <li>With PowerShell Core the web proxy is automatically detected as per your Internet Settings, but if you use an authenticated proxy then you will want to add the following to your PowerShell profile: [System.Net.Http.HttpClient]::DefaultProxy.Credentials = [System.Net.CredentialCache]::DefaultCredentials<br></li>
 			<br><br>
           </div>
           
