--- a/hve.html
+++ b/hve.html
@@ -169,7 +169,10 @@ Slight difference in the error message, and if you look up the error code it giv
 It's best to check the account activity in Azure to find what Conditional Access rules were blocking this. In our case, two rules blocked the access, MFA and Block Basic Auth.<br>
 <br>
           After allowing an exception the mail was sent via HVE.<br>
-
+<br>
+		Update August 2024: After using HVE for three months, I encountered a new issue: the password expired on the Azure Entra account. Normally with on-prem service accounts, I would tick the AD 'password never expires' checkbox, but as these exist only in Entra there was no option. Instead, you need to create a Password Policy in M365 Admin and assign it to the account.<br>
+		<br>
+		
           
           <br>
           
