--- a/decommExchange.html
+++ b/decommExchange.html
@@ -161,6 +161,7 @@ When you have moved all your mailboxes to the cloud, it's finally time to remove
 	  - Move any system mailboxes to a remaining Exchange server.<br>
 	  - Uninstall Exchange 2016 and reboot.<br>
 	  - Update scripts so that they no longer use the decommed servers.<br>
+	  - Remove federation cert - <a href='https://www.exchangeitup.net/2021/12/exchange-removing-oldexpired-federation.html'>ADSI Edit may be required</a><br>
         
 			<br><br>
           </div>
