--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="powershellHash.html" class=two>Hash versus Generic List speed test</a>
 		  <a href="decommExchange.html" class=two>Decommission On-Prem Exchange</a><br>
 		  <a href="automateUserCreation.html" class=two>Automate User Creation via PowerShell and Excel</a><br>
 		  <a href="azureVM.html" class=two>List Azure Virtual Machines via PowerShell</a><br>
@@ -140,6 +141,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <table class=indexTable> 
 		      <br>
 		     <tr><td> <br><b>2024</b></td><td></td></tr>
+	<tr><td><a href="powershellHash.html" class=two>Hash versus Generic List speed test</a><br></td><td>19-Aug-24</td></tr>
 	<tr><td><a href="decommExchange.html" class=two>Decommission On-Prem Exchange</a><br></td><td>07-Aug-24</td></tr>
 	<tr><td><a href="automateUserCreation.html" class=two>Automate User Creation via PowerShell and Excel</a><br></td><td>20-Jul-24</td></tr>
 	<tr><td><a href="azureVM.html" class=two>List Azure Virtual Machines via PowerShell</a><br></td><td>13-Jul-24</td></tr>
