--- a/decommExchange.html
+++ b/decommExchange.html
@@ -79,6 +79,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="powershellHash.html" class=two>Hash versus Generic List speed test</a>
 		  <a href="decommExchange.html" class=two>Decommission On-Prem Exchange</a><br>
 		  <a href="automateUserCreation.html" class=two>Automate User Creation via PowerShell and Excel</a><br>
 		  <a href="azureVM.html" class=two>List Azure Virtual Machines via PowerShell</a><br>
