--- a/quarantineDelete.html
+++ b/quarantineDelete.html
@@ -148,7 +148,15 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=datestamp>20-Aug-24</div>
         <div class=content><br>
 You go to your Office365 Quarantine, you delete an email, making sure to tick the box to permanently delete the mail. You then go back to the main Quarantine page and find the deleted mail still there. If you try and select the mail it says it has already been deleted.<br>
-          <br>
+     	<br>
+		<img src=quarantineDelete01.png class=ImageMain>
+		<div class=ImageCaption>↑ We deleted the selected quarantined mail permanently.</div>
+		<br>
+		<img src=quarantineDelete02.png class=ImageMain>
+		<div class=ImageCaption>↑ The mail is still visible, but can no longer be opened.</div>
+		<br>
+		
+		<br>
           This seems to have occurred for a number of O365 users over the last few years, alas a permanent fix does not seem to be forthcoming from Microsoft.<br>
           
           <br><br>
