--- a/graphAudit.html
+++ b/graphAudit.html
@@ -164,6 +164,8 @@ Running the MG Graph command <a href='https://learn.microsoft.com/en-us/answers/
           <div class=code>
           New-MgBetaSecurityAuditLogQuery_Create: {"message":"App:xxxxxx dont have any permissions"}<br>
           </div>
+		<br>
+		References: <a href='https://techcommunity.microsoft.com/t5/security-compliance-and-identity/using-the-microsoft-purview-audit-search-graph-api/ba-p/4135267'>MS Tech Community</a><br>
           <br><br>
           </div>
           
