--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br>
 		  <a href="graphAudit.html" class=two>Graph Audit Log returns 403</a><br>
 		  <a href="quarantineDelete.html" class=two>Mails not getting deleted from O365 Quarantine</a><br>
 		  <a href="powershellHash.html" class=two>Hash versus Generic List speed test</a><br>
@@ -143,6 +144,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <table class=indexTable> 
 		      <br>
 		     <tr><td> <br><b>2024</b></td><td></td></tr>
+	<tr><td><a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br></td><td>06-Sep-24</td></tr>
 	<tr><td><a href="graphAudit.html" class=two>Graph Audit Log returns 403</a><br></td><td>22-Aug-24</td></tr>
 	<tr><td><a href="quarantineDelete.html" class=two>Mails not getting deleted from O365 Quarantine</a><br></td><td>20-Aug-24</td></tr>
 	<tr><td><a href="powershellHash.html" class=two>Hash versus Generic List speed test</a><br></td><td>19-Aug-24</td></tr>
