--- a/mailUser.html
+++ b/mailUser.html
@@ -79,6 +79,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="integratedApp.html" class=two>Integrated App deployment issues</a><br>
 		  <a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br>
 		  <a href="graphAudit.html" class=two>Graph Audit Log returns 403</a><br>
 		  <a href="quarantineDelete.html" class=two>Mails not getting deleted from O365 Quarantine</a><br>
